clusters/main/kubernetes/flux-system/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: longhorn-system
  annotations:
      cert-manager.io/cluster-issuer: domain-0-le-prod
      cert-manager.io/private-key-rotation-policy: Always
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: 'true'
      traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: cap.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: capacitor
            port:
              number: 9000
  tls:
    - hosts:
      - cap.${DOMAIN_0}
      secretName: cap-tls-0
status:
  loadBalancer:
    ingress:
    - ip: ${TRAEFIK_IPC}
